--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,11 +19,25 @@
      <layout class="QHBoxLayout" name="horizontalLayout"/>
     </item>
     <item>
-     <widget class="QPushButton" name="startButton">
-      <property name="text">
-       <string>Start</string>
-      </property>
-     </widget>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLineEdit" name="portNameLineEdit"/>
+        </item>
+        <item>
+         <widget class="QComboBox" name="portBaudRateComboBox"/>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QPushButton" name="startButton">
+        <property name="text">
+         <string>Start</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
