--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,12 +11,37 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Charter</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <layout class="QVBoxLayout" name="verticalPlotLayout"/>
+     <layout class="QVBoxLayout" name="verticalPlotLayout">
+      <item>
+       <widget class="QGroupBox" name="positionGroupBox">
+        <property name="title">
+         <string>Position</string>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <layout class="QHBoxLayout" name="positionHorizontalLayout"/>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="distanceGroupBox">
+        <property name="title">
+         <string>Distance</string>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_3">
+         <item>
+          <layout class="QHBoxLayout" name="distanceHorizontalLayout"/>
+         </item>
+        </layout>
+       </widget>
+      </item>
+     </layout>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
