--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
       <item>
        <widget class="QGroupBox" name="positionGroupBox">
         <property name="title">
-         <string>Position</string>
+         <string>Pozycja</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
@@ -32,7 +32,7 @@
       <item>
        <widget class="QGroupBox" name="distanceGroupBox">
         <property name="title">
-         <string>Distance</string>
+         <string>Odległość</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
